2009-06-07  Sanel <karijes@users.sourceforge.net>

	* src/MenuItem.cpp: some Sun Studio quirks

2009-06-06  Sanel <karijes@users.sourceforge.net>

	* src/MenuItem.cpp: better way to determine icon and label positions; also
	fixes issue when the label is too large so menu window could not correctly
	recalculate own width
	* examples/menu.cpp:
	* examples/menu.fl: extending examples for corner cases

2009-06-03  Sanel <karijes@users.sourceforge.net>

	* edelib/MenuItem.h:
	* src/MenuItem.cpp: changes to allow images in menu items
	* examples/menu.cpp: added some icons to test against
	* examples/menu.cpp: extended a little bit

2009-06-02  Sanel <karijes@users.sourceforge.net>

	* examples/Jamfile: let menu.cpp gets FLTK include paths during
	compilation

2009-06-30  Sanel <karijes@users.sourceforge.net>

	* Forking FLTK menu due it's inability to be extended; names are changed
	and edelib namespace is used
	* examples/menu.cpp: small demo
	* Jamrules: remove edelib-gui.pc when 'jam distclean' given

2009-06-08  Sanel <karijes@users.sourceforge.net>

	* src/Window.cpp: added Fltk/Scheme key

2009-05-15  Sanel <karijes@users.sourceforge.net>

	* edelib/Window.h:
	* src/Window.cpp: do not load icon theme when WIN_INIT_NONE was given
	* src/IconTheme.cpp: removed some unneeded output

2009-05-14  Sanel <karijes@users.sourceforge.net>

	* all: split libedelib to libedelib and libedelib_gui
	* edelib-gui.pc.in:
	* configure.in:
	* Jamfile: added edelib-gui.pc.in

2009-05-11  Sanel <karijes@users.sourceforge.net>

	* edelib/Regex.h:
	* src/Regex.cpp:
	* test/regex.cpp:
	* examples/elinks.cpp: replaced GNU regex engine with pcre; updated tests
	and elinks example
	* examples/icon_chooser.cpp: let it use edelib::Window

2009-04-22  Sanel <karijes@users.sourceforge.net>

	* === Released 2.0 alpha ===

2009-04-20  Sanel <karijes@users.sourceforge.net>

	* src/StrUtil.cpp: some valgrind warning fixup
	* src/rx/regex.h: __restrict_arr makes a lot of problems on NetBSD's gcc